--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@ body {
               </div>
               <div class="margin-top-64">
                 <div style="opacity:0;-webkit-transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="contact_form-block w-form">
-                  <form id="email-form" name="email-form" data-name="Email Form" method="POST" action="https://formsubmit.co/info@jpfoodlab.com" class="contact_form" data-wf-page-id="6858d1f251602bf1c5e2d43e" data-wf-element-id="96e95127-87cf-6507-27a8-c4a00c736612">
+                  <form id="email-form" name="email-form" data-name="Email Form" class="contact_form" data-wf-page-id="6858d1f251602bf1c5e2d43e" data-wf-element-id="96e95127-87cf-6507-27a8-c4a00c736612">
                     <div class="form-field-wrapper">
                       <label for="first_name" class="field-label">First Name</label>
                       <input class="form-input w-input" maxlength="256" name="first_name" data-name="first_name" placeholder="First name" type="text" id="first_name" required="">
@@ -235,28 +235,30 @@ body {
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6858d1f251602bf1c5e2d3c7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
+    (function() {
+      emailjs.init('h3wr8RGdBajbwPWrW'); // Your EmailJS public key
+    })();
+
     document.addEventListener('DOMContentLoaded', function() {
       var form = document.getElementById('email-form');
       if (form) {
         form.addEventListener('submit', function(e) {
-        
-          form.style.display = 'none';
+          e.preventDefault();
+          e.stopImmediatePropagation(); // Prevent Webflow's handler
+          // Hide both messages before sending
           var done = document.querySelector('.w-form-done');
-          if (done) done.style.display = 'block';
-        });
-      }
-    });
-  </script>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      var subscribeForm = document.getElementById('wf-form-Subscribe-Form');
-      if (subscribeForm) {
-        subscribeForm.addEventListener('submit', function(e) {
-          e.preventDefault(); // Remove this line when going live
-          subscribeForm.style.display = 'none';
-          var done = subscribeForm.parentElement.querySelector('.w-form-done');
-          if (done) done.style.display = 'block';
+          var fail = document.querySelector('.w-form-fail');
+          if (done) done.style.display = 'none';
+          if (fail) fail.style.display = 'none';
+          emailjs.sendForm('service_q3tfrsk', 'template_9cf4gky', form)
+            .then(function() {
+              form.style.display = 'none';
+              if (done) done.style.display = 'block';
+            }, function(error) {
+              if (fail) fail.style.display = 'block';
+            });
         });
       }
     });
