--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@ body {
                 </div>
               </div>
               <div class="email-form_wrap w-form">
-                <form id="wf-form-Subscribe-Form" name="wf-form-Subscribe-Form" data-name="Subscribe Form" method="post" action="https://formsubmit.co/info@jpfoodlab.com" class="email_form" data-wf-page-id="6858d1f251602bf1c5e2d439" data-wf-element-id="20844860-179d-c2b4-f707-f76c90f6c7a4">
+                <form id="wf-form-Subscribe-Form" name="wf-form-Subscribe-Form" data-name="Subscribe Form" method="get" class="email_form" data-wf-page-id="6858d1f251602bf1c5e2d439" data-wf-element-id="20844860-179d-c2b4-f707-f76c90f6c7a4">
                   <div class="form-field-wrapper"><input class="form-input is-green w-input" maxlength="256" name="email" data-name="email" style="opacity:0;-webkit-transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" placeholder="Enter your email" type="email" id="email-2" required=""></div><input type="submit" data-wait="Please wait..." style="-webkit-transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0.5em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="button w-button" value="Notify me">
                 </form>
-                <div class="form-success w-form-done" style="display:none;">
-                  <div>Thank you for subscribing! We'll get you updated.</div>
+                <div class="form-success w-form-done">
+                  <div>Thank you! Your submission has been received!</div>
                 </div>
                 <div class="form-error w-form-fail">
                   <div>Oops! Something went wrong while submitting the form.</div>
@@ -274,11 +274,11 @@ body {
               <p class="text-size-medium">Join our newsletter to get the latest on opening updates, special promos, new dishes, and events fresh off the grill.</p>
             </div>
             <div class="email-form_wrap w-form">
-              <form id="wf-form-Subscribe-Form-footer" name="wf-form-Subscribe-Form" data-name="Subscribe Form" method="post" action="https://formsubmit.co/info@jpfoodlab.com" class="email_form" data-wf-page-id="6858d1f251602bf1c5e2d439" data-wf-element-id="d0e80abc-0b67-11d7-2a38-8a77c9d01eba">
+              <form id="wf-form-Subscribe-Form" name="wf-form-Subscribe-Form" data-name="Subscribe Form" redirect="form action=&quot;https://formsubmit.co/info@jpfoodlab.com&quot;" data-redirect="form action=&quot;https://formsubmit.co/info@jpfoodlab.com&quot;" method="post" class="email_form" data-wf-page-id="6858d1f251602bf1c5e2d439" data-wf-element-id="d0e80abc-0b67-11d7-2a38-8a77c9d01eba">
                 <div class="form-field-wrapper"><input class="form-input w-input" maxlength="256" name="email" data-name="email" placeholder="Enter your email" type="email" id="email-4" required=""></div><input type="submit" data-wait="Please wait..." class="button w-button" value="Subscribe">
               </form>
-              <div class="form-success w-form-done" style="display:none;">
-                <div>Thank you for subscribing! We'll get you updated.</div>
+              <div class="form-success w-form-done">
+                <div>Thank you! Your submission has been received!</div>
               </div>
               <div class="form-error w-form-fail">
                 <div>Oops! Something went wrong while submitting the form.</div>
@@ -320,24 +320,5 @@ body {
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6858d1f251602bf1c5e2d3c7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
-  <script>
-  // Newsletter form thank you logic for both forms
-  function handleNewsletterForm(formSelector) {
-    var form = document.querySelector(formSelector);
-    if (!form) return;
-    var successDiv = form.nextElementSibling;
-    form.addEventListener('submit', function(e) {
-      e.preventDefault(); // Remove/comment this line when going live
-      form.style.display = 'none';
-      if (successDiv && successDiv.classList.contains('w-form-done')) {
-        successDiv.style.display = 'block';
-      }
-    });
-  }
-  // For main section form
-  handleNewsletterForm('form#wf-form-Subscribe-Form');
-  // For footer form (use unique id for clarity)
-  handleNewsletterForm('form#wf-form-Subscribe-Form-footer');
-  </script>
 </body>
 </html>
